@@ -12,6 +12,10 @@ Refactoring from Sublime 3
 		* image
 		* link
 		* table
+* usage of magsbs functions for:
+	+ creation of the structure
+	+ conversion of a file or complete book/lecture
+
 
 * add/modify input GUI for:
 	* table input of count of columns and rows, format column_count|row_count
